# nn

./: .gitignore  HLint.hs  nn.cabal  stack.yaml
cbits/: arithmetic.c  arithmetic.h  arithmetic_types.h  simd_exp.c  simd_exp.h  simd_expf.c  simd_expf.h
src/: BenchmarkMain.hs  LearningAlgorithms.hs  Main.hs  NN.hs  Nonlinearity.hs  Util.hs
src/Data/: Aligned.hs  AlignedStorableVector.hs  ConstrainedConvert.hs  ConstrainedFunctor.hs  ConstrainedIsomorphism.hs  Eps.hs  Grad.hs  MatrixClass.hs  MatrixDouble.hs  Nonlinearity.hs  OpenBlasEnums.chs  OpenBlasMatrix.hs  PureMatrix.hs  SpecialisedFunction.hs  StorableMatrixWithTranspose.hs  StorableVectorDouble.hs  UnboxMatrix.hs  UnboxMatrixWithTranspose.hs  V3.hs  VectClass.hs  VectorDouble.hs  Zippable.hs
src/Data/Aligned/: Double.chs  Float.chs
src/Data/Aligned/Double/: Foreign.hs
src/Data/Aligned/Float/: Foreign.hs
src/Data/Nonlinearity/: Exp.hs  HyperbolicTangent.hs  Internal.hs  Linear.hs  Proxies.hs  Sigmoid.hs
src/Data/OpenBlasMatrix/: Foreign.chs
src/NN/: Description.hs  Generic.hs  Specific.hs
src/Unboxed/: Functor.hs
src/Util/: ConstrainedFunctor.hs  V3.hs  Zippable.hs
tests/: ApproxEq.hs  Main.hs  MatrixTests.hs  NNTests.hs  OtherTests.hs  TestUtils.hs  VectorTests.hs
