name:                nn
version:             0.1.0.0
synopsis:            Neural networks
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sergey Vinokurov
maintainer:          serg.foo@gmail.com
category:            Mathematics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.ConstrainedConvert
                       Data.MatrixDouble
                       Data.OpenBlasMatrix
                       Data.OpenBlasMatrix.Foreign
                       Data.PureMatrix
                       Data.StorableMatrixWithTranspose
                       Data.StorableVectorDouble
                       Data.VectClass
                       Data.VectorDouble
                       Data.UnboxMatrix
                       Data.UnboxMatrixWithTranspose
                       Data.MatrixClass
                       LearningAlgorithms
                       NN
                       NN.Generic
                       NN.Specific
                       Nonlinearity
                       Util
                       Util.ConstrainedFunctor
                       Util.V3
                       Util.Zippable
  build-depends:       base >=4.6, text, mtl, vector, random,
                       reflection, ad, random-source, random-fu, free, deepseq,
                       wl-pprint-text
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -W -Wall
                       -fwarn-monomorphism-restriction
                       -fno-warn-name-shadowing
                       -fno-warn-type-defaults
                       -ferror-spans
                       -rtsopts
                       -fllvm -O2 -optlc=-O3 -optlo=-O3
                       -funfolding-creation-threshold=1000  -funfolding-use-threshold=1000
  ghc-prof-options:    -fprof-auto
  build-tools:         c2hs
  includes:            cblas.h
  extra-libraries:     openblas

executable nn
  main-is:             src/Main.hs
  -- other-modules:
  -- other-extensions:
                       --random-source, deepseq, wl-pprint-text,
  build-depends:       nn, base >=4.6, text, vector, mtl, directory,
                       random, random-source, random-fu,
                       Chart, Chart-cairo, colour, lens, data-default-class,
                       criterion
  default-language:    Haskell2010
  ghc-options:         -W -Wall
                       -fwarn-monomorphism-restriction
                       -fno-warn-name-shadowing
                       -ferror-spans
                       -rtsopts
                       -fllvm -O2 -optlc=-O3 -optlo=-O3
                       -funfolding-creation-threshold=1000  -funfolding-use-threshold=1000
  ghc-prof-options:    -fprof-auto

test-suite test-nn
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >= 3 && < 5, vector, mtl, text, wl-pprint-text,
                       random, random-source, random-fu,
                       tasty, tasty-hunit,
                       nn
  ghc-options:         -W -Wall
                       -fwarn-monomorphism-restriction
                       -fno-warn-name-shadowing
                       -fno-warn-type-defaults
                       -ferror-spans
                       -rtsopts
  ghc-prof-options:    -fprof-auto
